fixed dots not appearing on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -249,12 +249,6 @@ h3 {
   border-radius: var(--circle-border-radius);
   display: inline-block;
   transition: background-color 0.6s ease;
-  padding-left: 0px;
-  padding-right: 0px;
-}
-
-.dot::before {
-  content: '';
 }
 
 .active,
